<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/MENU_ITEM_UPLOAD"
          android:title="@string/upload"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/MENU_ITEM_BROWSE"
          android:title="@string/project"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/MENU_ITEM_LOGIN"
          android:title="@string/account"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/MENU_ITEM_CONTINUOUS"
          android:title="@string/continuous"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/MENU_ITEM_ABOUT"
          android:title="@string/About_Title"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/MENU_ITEM_HELP"
          android:title="@string/help"
          app:showAsAction="ifRoom"/>
</menu>
